# coco.hs

./: LICENSE  README.md  coco-hs-exe.tix  coco-hs.cabal  package.yaml
.github/workflows/: workflow.yml
app/: Git.hs  Main.hs
coverage/: coverage.tix  hpc_index_alt.html
coverage/coco-hs-0.1.0.0-BR2lrNTQHN41up97aIII6r/: Git.hs.html
haddock/: doc-index.html  index.html
haddock/all/: doc-index-124.html  doc-index-33.html  doc-index-36.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-94.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-X.html  doc-index-Y.html  doc-index-Z.html  (+1 more)
haddock/bytestring-0.10.12.1/: Data-ByteString-Builder-Extra.html  Data-ByteString-Builder-Internal.html  Data-ByteString-Builder-Prim-Internal.html  Data-ByteString-Builder-Prim.html  Data-ByteString-Builder.html  Data-ByteString-Char8.html  Data-ByteString-Internal.html  Data-ByteString-Lazy-Builder-ASCII.html  Data-ByteString-Lazy-Builder-Extras.html  Data-ByteString-Lazy-Builder.html  Data-ByteString-Lazy-Char8.html  Data-ByteString-Lazy-Internal.html  Data-ByteString-Lazy.html  Data-ByteString-Short-Internal.html  Data-ByteString-Short.html  Data-ByteString-Unsafe.html  Data-ByteString.html
haddock/coco-hs-0.1.0.0/: Git.html  coco-hs.haddock  coco-hs.txt  doc-index.html  doc-index.json  index.html
test/: Tests.hs
(+67 files in other folders)
