cabal-version:      3.6
name:               coco-hs
version:            0.1.0
license:            MIT

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

author:             Leon Teubert
maintainer:         teubert.leon@googlemail.com

-- A copyright notice.
-- category:
extra-source-files:
    README.md

executable coco-hs
    other-modules: Git
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        process ^>=1.6.14.0,
        split ^>=0.2.3.4
    hs-source-dirs:   app
    default-language: Haskell2010
